<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gender Recognition</string>
    <string name="course_name">Multimedia Apps and Future Internet</string>
    <string name="first_student">Cesarini Walter</string>
    <string name="first_matr">3824317</string>
    <string name="second_student">Fabrini Jacopo</string>
    <string name="second_matr">3799666</string>
    <string name="recognition">RECOGNITION</string>
    <string name="action_settings">Settings</string>
    <string name="trainm">TRAIN MALE</string>
    <string name="trainf">TRAIN FEMALE</string>
    <string name="device_id">IMEI: </string>
    <string name="pitch_info"></string>
    <string name="threshold_info"></string>

</resources>